--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build_desktop": "sass scss/desktop.scss:module/desktop/public/css/desktop.css"
   },
   "author": "lucaselvira96@gmail.com",
   "license": "ISC",
