Allow the comunication by websocket on the form make the form modal start the desktop interaction wireframe start the mongodb bbdbb fix some bugs on loadapp module

--- a/commonModules/config.json
+++ b/commonModules/config.json
@@ -63,6 +63,11 @@
         }],
         "style": ["css/desktop.css"],
         "script": ["js/main.js"]
+    },
+    "login": {
+        "pluggins": [],
+        "style": [],
+        "script": ["js/main.js"]
     }
 
 }
