--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build_desktop": "sass scss/desktop.scss:module/desktop/public/css/desktop.css"
+    "build_desktop": "sass --watch scss/desktop.scss:module/desktop/public/css/desktop.css"
   },
   "author": "lucaselvira96@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "^3.0.5",
     "socket.io": "^2.1.0"
   }
 }
