--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build_desktop": "sass --watch scss/desktop.scss:module/desktop/public/css/desktop.css"
+    "build_desktop": "sass --watch scss/desktop.scss:module/desktop/public/css/desktop.css",
+    "build_filesystem": "sass --watch scss/filesystem.scss:module/filesystem/public/css/filesystem.css"
   },
   "author": "lucaselvira96@gmail.com",
   "license": "ISC",
