Allow to send files to bin trash allow to change name of files/folder change the place of is create the context menu and the way of it is created modify the trash's path fix the bug of the contextMenu The global style is loaded by default

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "sass --watch scss/style.scss:public/css/style.css",
     "build_desktop": "sass --watch scss/desktop.scss:module/desktop/public/css/desktop.css",
     "build_filesystem": "sass --watch scss/filesystem.scss:module/filesystem/public/css/filesystem.css"
   },
