Allow to change the image of background and minify the filesytem them Allow to load external html with the plugins Clean the modal/index.js file Create new method to mongoDB library to allow update values on the bbdd Adap the topbar of filesystem to vue's library

--- a/commonModules/config.json
+++ b/commonModules/config.json
@@ -4,14 +4,15 @@
         "pluggins": [
         {
             "name": "selectfile",
-            "dependencies": ["whatcher"],
-            "difference_between_front_and_back": true,
+            "dependencies": false,
+            "difference_between_front_and_back": false,
             "load_default": false,
             "style": ["selectfile.css"],
             "at_init": false,
             "external_path": "../../../commonModules/",
             "exec": true,
-            "place": "both"
+            "place": "front_end",
+	    "hipperText": "selectfile.html"
         },
         {
             "name": "contextmenu",
