--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "oraculo",
-  "version": "1.0.0",
+  "name": "Delfos",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,8 @@
   "author": "lucaselvira96@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^2.1.1",
+    "mime-types": "^2.1.18",
     "mongodb": "^3.0.5",
     "socket.io": "^2.1.0"
   }
