Create the module chat. It permit to search a user for make a new chat. Don't create it yet

--- a/commonModules/config.json
+++ b/commonModules/config.json
@@ -70,6 +70,10 @@
         "pluggins": [],
         "style": [],
         "script": ["js/main.js"]
+    },
+    "chat": {
+        "pluggins": [],
+        "style": ["css/chat.css"],
+        "script": ["js/main.js"]
     }
-
 }
