--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sass --watch scss/style.scss:public/css/style.css",
     "build_desktop": "sass --watch scss/desktop.scss:module/desktop/public/css/desktop.css",
-    "build_filesystem": "sass --watch scss/filesystem.scss:module/filesystem/public/css/filesystem.css"
+    "build_filesystem": "sass --watch scss/filesystem.scss:module/filesystem/public/css/filesystem.css",
+    "build_chat": "sass --watch scss/chat.scss:module/chat/public/css/chat.css"
   },
   "author": "lucaselvira96@gmail.com",
   "license": "ISC",
