Get the realPath for all symbolink link type file on the filesystem module Make the index page with the interaction and the style. Is missing to make it responsive on the module login Add some npm run's and a package of the package.json Add a real favicon to the index page and the meta tag to view it responsive Change some general css to adapt the app to the real apareance of it

--- a/commonModules/config.json
+++ b/commonModules/config.json
@@ -68,7 +68,7 @@
     },
     "login": {
         "pluggins": [],
-        "style": [],
+        "style": ["css/login.css", "../../../public/css/style.css"],
         "script": ["js/main.js"]
     },
     "chat": {
