Add the style to the desktop Change some index of the git repo change the folders structure fix some bugs of the desktop main.js file and adapt some events to vue's event handler

--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,15 @@ logs/
 .sass-cache/
 *.map
 node_modules/
+dev/
+files/
+pruebas/
+tmp/
+public/css/
 module/*/public/css/*.css
 package-lock.json
-files/
 notas
 *.py
-index.html
-serverProve.js
-tmp/
-prueba*
-delfos.sublime-project
-delfos.sublime-workspace
-images/
 getIp
+getFont*
+*.md
