Use a ip to make available the testing of the responsive desing and make the login screen responsive

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ logs/
 *.map
 node_modules/
 dev/
-files/user
+files/users/
+files/profile/
 pruebas/
 tmp/
 public/css/
 module/*/public/css/*.css
+module/server/files/
 package-lock.json
 notas
 *.py
