Changes on the amazon instance

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build_desktop": "sass --watch scss/desktop.scss:module/desktop/public/css/desktop.css",
     "build_filesystem": "sass --watch scss/filesystem.scss:module/filesystem/public/css/filesystem.css",
     "build_chat": "sass --watch scss/chat.scss:module/chat/public/css/chat.css",
-    "build_login": "sass --watch scss/login.scss:module/login/public/css/login.css --style compressed"
+    "build_login": "sass --watch scss/login.scss:module/login/public/css/login.css --style compressed",
+    "build_all": "sass scss/style.scss:public/css/style.css; sass scss/desktop.scss:module/desktop/public/css/desktop.css; sass scss/filesystem.scss:module/filesystem/public/css/filesystem.css; sass scss/chat.scss:module/chat/public/css/chat.css; sass scss/login.scss:module/login/public/css/login.css"
   },
   "author": "lucaselvira96@gmail.com",
   "license": "ISC",
